--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ section {
   width: 960px;
   margin: auto;
   padding: 20px;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .24);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .24), 0 1px 4px rgba(0, 0, 0, .48);
   /* border: 5px solid black; */
-  background-color: cadetblue;
+  background-color: #99c0c1;
   border-radius: 20px;
   margin-top: 15px;
   margin-bottom: 15px;
